--- a/Papa-Jhons/Areas/AdminAreas/Views/PizzaCategory/Index.cshtml
+++ b/Papa-Jhons/Areas/AdminAreas/Views/PizzaCategory/Index.cshtml
@@ -1,5 +1,22 @@
 ﻿@model IEnumerable<Papa_Jhons.Entities.PizzaCategory>
-
+<div class="row">
+    <div class="main-header" style="margin-top: 0px;">
+        <h4>Pizza Category</h4>
+        <ol class="breadcrumb breadcrumb-title breadcrumb-arrow">
+            <li class="breadcrumb-item">
+                <a asp-area="AdminAreas" asp-controller="Home" asp-action="Statistics">
+                    <i class="icofont icofont-home"></i>
+                </a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="#!">Entities</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a asp-area="AdminAreas" asp-controller="PizzaCategory" asp-action="Index">PizzaCategory</a>
+            </li>
+        </ol>
+    </div>
+</div>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
