--- a/Papa-Jhons/Areas/AdminAreas/Views/Order/Index.cshtml
+++ b/Papa-Jhons/Areas/AdminAreas/Views/Order/Index.cshtml
@@ -36,7 +36,7 @@
                 City
             </th>
             <th>
-                Adress
+                Address
             </th>
 
             <th>
@@ -71,7 +71,7 @@
                     @order.City
                 </td>
                 <td>
-                    @order.Adress
+                    @order.Address
                 </td>
 
          
