--- a/Papa-Jhons/Views/Shared/_MyProfilePartial.cshtml
+++ b/Papa-Jhons/Views/Shared/_MyProfilePartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ProfileVM
-<form asp-controller="account" asp-action="details" method="post">
+<form asp-controller="account" asp-action="Index" method="post">
     <div class="row">
         <div class="col-12 col-lg-6">
             <p class="profile-titles">Personal Information</p>
