--- a/Papa-Jhons/Areas/AdminAreas/Views/Contact/Replace.cshtml
+++ b/Papa-Jhons/Areas/AdminAreas/Views/Contact/Replace.cshtml
@@ -41,7 +41,7 @@
                     Reply
                     <span class="text-danger">*</span>
                 </label>
-                <textarea name="comment" cols="41" rows="7"></textarea>
+                <textarea name="replace" cols="41" rows="7"></textarea>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
