--- a/Papa-Jhons/Areas/AdminAreas/Views/Home/Statistics.cshtml
+++ b/Papa-Jhons/Areas/AdminAreas/Views/Home/Statistics.cshtml
@@ -101,10 +101,17 @@
     </script>
 }
 
-<h1>Category Statistics</h1>
-<canvas id="categoryChart" width="400" height="200"></canvas>
+<div class="row">
+ <div class="col-lg-6">
+        <h1>Category Statistics</h1>
+        <canvas id="categoryChart" width="400" height="200"></canvas>
 
-<hr />
+        <hr />
+ </div>
+    <div class="col-lg-6">
 
-<h1>User Statistics</h1>
-<canvas id="userChart" width="400" height="200"></canvas>
+    <h1>User Statistics</h1>
+    <canvas id="userChart" width="400" height="200"></canvas>
+    </div>
+
+</div>
