--- a/Papa-Jhons/Areas/AdminAreas/Views/Shared/_Layout.cshtml
+++ b/Papa-Jhons/Areas/AdminAreas/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <html lang="en">
 
 <head>
-   <title>Quantum Able Bootstrap 4 Admin Dashboard Template</title>
+   <title>PapaJhons AdminPanel </title>
    <!-- HTML5 Shim and Respond.js IE9 support of HTML5 elements and media queries -->
    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
    <!--[if lt IE 9]>
@@ -146,6 +146,8 @@
                             <li><a class="waves-effect waves-dark" asp-area="Adminareas" asp-controller="Slider" asp-action="Index"><i class="icon-arrow-right"></i>Sliders</a></li>
                             <li><a class="waves-effect waves-dark" asp-area="Adminareas" asp-controller="Setting" asp-action="Index"><i class="icon-arrow-right"></i> Settings</a></li>
                             <li><a class="waves-effect waves-dark" asp-area="Adminareas" asp-controller="Rules" asp-action="Index"><i class="icon-arrow-right"></i>Rules</a></li>
+                            <li><a class="waves-effect waves-dark" asp-area="Adminareas" asp-controller="About" asp-action="Index"><i class="icon-arrow-right"></i>Abouts</a></li>
+
 
                             <li><a class="waves-effect waves-dark" asp-area="Adminareas" asp-controller="Products" asp-action="Index"><i class="icon-arrow-right"></i>Products</a></li>
                     </ul>
